<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".LoginPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salem"
        android:layout_gravity="center"
        android:layout_marginBottom="220dp"
        android:textSize="50dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailLoginTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginAccount"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/AlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newUserButton"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

    <Button
        android:id="@+id/ForgetPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgetPassword"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>


</FrameLayout>