<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".SignUp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salem"
        android:layout_gravity="center"
        android:layout_marginBottom="220dp"
        android:textSize="50dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/userNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginTop="220dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <EditText
        android:id="@+id/EmailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <EditText
            android:id="@+id/PssswordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="380dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />



    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/ConformationPssswordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Conformationpassword"
            android:layout_marginTop="460dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/RegisterNewAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterNewAccount"
        android:layout_marginTop="230dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/AlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HaveAccountButton"
        android:layout_gravity="center"
        android:layout_marginTop="280dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>
</FrameLayout>